<resources>
    <string name="app_name">DDZB</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login">登录</string>
    <string name="login_register">立即注册</string>
    <string name="register_username">用户名</string>
    <string name="login_findPassword">找回密码</string>
    <string name="r_password">密码</string>
    <string name="r_password2">确认密码</string>
    <string name="r_gender">性别 :</string>
    <string name="r_phone">手机号</string>
    <string name="r_gender_M">男</string>
    <string name="r_gender_W">女</string>
    <string name="img_mayi">麻衣</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="unknown">保密</string>
    <string name="birthday">选择生日</string>
    <string name="birthday_title">日期</string>
</resources>
